@@ -3294,8 +3294,10 @@ make
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxglrunoffset"><code>nxgl_runoffset()</code></a></td>
-  <td><br></td>
-  <td align="center" bgcolor="lightgrey">NO</td>
+  <td>
+    Verified by <code>apps/examples/nxlines</code>.
+  </td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxglruncopy"><code>nxgl_runcopy()</code></a></td>
@@ -3304,13 +3306,17 @@ make
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxgltrapoffset"><code>nxgl_trapoffset()</code></a></td>
-  <td><br></td>
-  <td align="center" bgcolor="lightgrey">NO</td>
+  <td>
+    Verified by <code>apps/examples/nxlines</code>.
+  </td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxgltrapcopy"><code>nxgl_trapcopy()</code></a></td>
-  <td><br></td>
-  <td align="center" bgcolor="lightgrey">NO</td>
+  <td>
+    Verified by <code>apps/examples/nxlines</code>.
+  </td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxglcolorcopy"><code>nxgl_colorcopy</code></a></td>
@@ -3319,8 +3325,10 @@ make
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxglsplitline"><code>nxgl_splitline</code></a></td>
-  <td><br></td>
-  <td align="center" bgcolor="skyblue">PART</td>
+  <td>
+    Verified by <code>apps/examples/nxlines</code>.
+  </td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 </table></center>
 
@@ -3404,7 +3412,7 @@ make
   <td align="left" valign="top"><a href="#nxopenwindow"><code>nx_openwindow()</code></a></td>
   <td>Change to <code>CONFIG_EXAMPLES_NX_RAWWINDOWS=y</code> in the
      <code>&lt;NuttX-Directory&gt;/.config</code> file</td>
-</td>
+  </td>
   <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
@@ -3464,13 +3472,17 @@ make
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxfilltrapezoid"><code>nx_filltrapezoid()</code></a></td>
-  <td><br></td>
-  <td align="center" bgcolor="lightgrey">NO</td>
+  <td>
+    Verified by <code>apps/examples/nxlines</code>.
+  </td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxdrawline"><code>nx_drawline()</code></a></td>
-  <td><br></td>
-  <td align="center" bgcolor="lightgrey">NO</td>
+  <td>
+    Verified by <code>apps/examples/nxlines</code>.
+  </td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxglrgb2yuv"><code>nx_setbgcolor()</code></a></td>
